[package]
name = "toolfetch-rust"
version = "1.2.0"
edition = "2021"
description = "a cross platform gui information fetching tool"
repository = "https://github.com/x-kvoid-x/toolfetch-rust"


# windows dependencies
[target.'cfg(windows)'.dependencies]
druid = "0.7.0"
winapi = "*"
libmath = "0.2.1"

# macos dependencies
[target.'cfg(macos)'.dependencies]
druid = "0.7.0"
libmath = "0.2.1"
num_cpus = "1.13.1"