[package]
name = "toolfetch-rust"
version = "1.4.3"
edition = "2021"
authors = ["Kian [kiantd@gmail.com]"]
description = "a cross platform gui information fetching tool"
repository = "https://github.com/x-kvoid-x/toolfetch-rust"
build = "build.rs"

# windows dependencies
[target.'cfg(windows)'.dependencies]
druid = "0.7.0"
winapi = "0.3.9"
libmath = "0.2.1"
easy-http-request = "0.2.12"

# macos dependencies
[target.'cfg(unix)'.dependencies]
druid = "0.7.0"
libmath = "0.2.1"
num_cpus = "1.13.1"

[build-dependencies]
winres = "0.1"